This issue tracker has been migrated to GitHub, and is currently read-only.
For more information, see the GitHub FAQs in the Python's Developer Guide.

classification
Title: __repr__ of memoryview object has type unicode; should be str.
Type: behavior Stage: resolved
Components: Interpreter Core Versions: Python 2.7
process
Status: closed Resolution: fixed
Dependencies: Superseder:
Assigned To: pitrou Nosy List: mark.dickinson, pitrou
Priority: normal Keywords: patch

Created on 2009-10-15 15:43 by mark.dickinson, last changed 2022-04-11 14:56 by admin. This issue is now closed.

Files
File name Uploaded Description Edit
memoryview.patch mark.dickinson, 2009-10-15 15:43
Messages (3)
msg94094 - (view) Author: Mark Dickinson (mark.dickinson) * (Python committer) Date: 2009-10-15 15:43
Objects/memoryobject.c makes calls to PyUnicode_FromString and 
PyUnicode_FromFormat.  This prevents building of Python with the --
disable-unicode option.

Here's a patch.
msg94096 - (view) Author: Antoine Pitrou (pitrou) * (Python committer) Date: 2009-10-15 15:51
Looks good, obviously.
msg94097 - (view) Author: Mark Dickinson (mark.dickinson) * (Python committer) Date: 2009-10-15 15:55
Thanks, Antoine.  Fixed in r75438.
History
Date User Action Args
2022-04-11 14:56:54adminsetgithub: 51391
2009-10-15 15:55:35mark.dickinsonsetstatus: open -> closed
resolution: fixed
messages: + msg94097

stage: patch review -> resolved
2009-10-15 15:51:18pitrousetmessages: + msg94096
2009-10-15 15:43:59mark.dickinsoncreate