Issue #7142:  Fix uses of unicode in memoryview objects